<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    android:backgroundTint="@color/light_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/light_bg"
        android:padding="20dp">

        <TextView
            android:id="@+id/tvDialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Agregar Jugador"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:paddingBottom="16dp"/>

        <EditText
            android:id="@+id/etPlayerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/player_name"
            android:background="@drawable/rounded_edittext"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etPlayerPosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/player_pos"
            android:background="@drawable/rounded_edittext"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etPlayerNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/player_num"
            android:inputType="number"
            android:background="@drawable/rounded_edittext"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spTeams"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_edittext"
            android:padding="12dp" />

        <Button
            android:id="@+id/btnCancelPlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/cancel_text"
            android:backgroundTint="#AE1414"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:padding="12dp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btnSavePlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/save_text"
            android:backgroundTint="#4CAF50"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:padding="12dp"
            android:layout_gravity="center"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>
